--- a/packages/fact-note/package.json
+++ b/packages/fact-note/package.json
@@ -13,6 +13,7 @@
     "build": "npm rum build:types && node ./scripts/build.mjs && cp package.json ./dist/",
     "build-module": "node ./scripts/build-module.js",
     "perma-pub": "npm run build && (cd dist && npm pack) && node ./scripts/perma-pub.mjs ./dist/ar-frame-0.0.2.tgz",
+    "start": "nodemon .cosmos/cosmos-server.js",
     "cosmos": "cosmos --expose-imports"
   },
   "author": "Justin Shaw",
@@ -23,11 +24,9 @@
   },
   "devDependencies": {
     "@facts-kit/packajs": "https://arweave.net/hnNArrNrudkFJTJ6AGnyDrsmD04JZIbdlEMrLNumUCQ",
-    "@fastify/static": "6.11.2",
     "@types/react": "18.2.17",
     "esbuild": "0.18.17",
     "express": "4.18.2",
-    "fastify": "4.24.3",
     "nodemon": "3.0.1",
     "react-cosmos": "6.0.0-beta.6",
     "react-cosmos-dom": "6.0.0-beta.6",
