--- a/packages/fact-note/tsconfig.json
+++ b/packages/fact-note/tsconfig.json
@@ -4,7 +4,8 @@
     "declaration": true,
     "allowJs": true,
     "emitDeclarationOnly": true,
-    "declarationDir": "dist"
+    "declarationDir": "dist",
+    "esModuleInterop": true
   },
   "include": ["./src"],
   "exclude": ["node_modules", "dist", "./src/*.fixture.*"]
